<resources>
    <string name="app_name">Stopit</string>
    <string name="facebook_app_id">1079841705401748</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title">StopIt</string>
    <string name="title_activity_profile">StopIt!</string>
    <string name="slogan">stop smoking while having fun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_money_target">Add new money target</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_numcig">Number of cigarettes per day</string>
    <string name="pref_default_numcig">0</string>

    <string name="pref_title_costcig">Cigarette cost (in € cents)</string>
    <string name="pref_default_costcig">0</string>

    <string name="pref_title_daysToReduce">Days to stop</string>
    <string name="pref_default_days">365</string>

    <!-- settings for alternative activities -->

    <string name="pref_header_altactivities">Alternative Activities</string>

    <string name="pref_title_food">Food</string>
    <string name="pref_title_sport">Sport</string>
    <string name="pref_title_social">Social</string>
    <string name="pref_title_art">Art</string>
    <string name="pref_title_various">Various</string>
    <string name="title_activity_add_money_target">AddMoneyTargetActivity</string>
    <string name="title_activity_first_login_settings">FirstLoginSettingsActivity</string>
    <string name="pick_time">Set first cigarette</string>
    <string name="picklast">Set last cigarette</string>
    <string name="lastC">Last cigarette</string>
    <string name="firstC">First cigarette</string>

    <string name="title1">One Day Stop</string>
    <string name="title2">Three Days Stop</string>
    <string name="title3">One Week Stop</string>
    <string name="title4">Two Weeks Stop</string>
    <string name="title5">One Month Stop</string>

    <string name="desc1">Not smoke for one day</string>
    <string name="desc2">Not smoke for three days</string>
    <string name="desc3">Not smoke for one week</string>
    <string name="desc4">Not smoke for two weeks</string>
    <string name="desc5">Not smoke for one month</string>
    <string name="title_activity_new_challenge">NewChallengeActivity</string>
    <string name="title_choose">Choose</string>

    <!-- Add new Money target-->

    <string name="catlabel">Category</string>
    <string name="pricelabel">Value in €:</string>
    <string name="timelabel">Time to complete:</string>

    <!-- Leaderboard -->
    <string name="dailylead">DAILY</string>
    <string name="weeklylead">WEEKLY</string>
    <string name="alltimelead">ALL TIME</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_challenge_detail">ChallengeDetail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
